# shmq

./: .gitignore  CMakeLists.txt  README.md
include/: shmq.hpp
samples/: CMakeLists.txt  reader.cpp  reader_lib.cpp  writer.cpp  writer_lib.cpp
src/: CMakeLists.txt  queue.cpp  queue.hpp  shmq.cpp
